<resources>
    <string name="app_name">Hula</string>
    <string name="permissions_sdcard">无法读取内存卡！</string>
    <string name="permissions_camera">无法使用相机！</string>
    <string name="permissions_audio">无法录制音频！</string>
    <string name="text_null">-----</string>
    <string name="save">Save</string>

    <!--主页-->
    <string name="for_you">For You</string>

    <!--搜索-->
    <string name="search">Search</string>

    <!--消息-->
    <string name="messages">Messages</string>

    <!--邀请-->
    <string name="invites">Invites</string>
    <string name="buddies">Buddies</string>
    <string name="groups">Groups</string>
    <string name="more_than_7_days">More than 7 days</string>
    <string name="reactivate_invite">Tap to reactivate the invite!</string>
    <string name="event_expired">Event expired</string>
    <string name="view_less">View Less</string>
    <string name="requests">Requests</string>
    <string name="invitations">Invitations</string>
    <string name="accept">Accept</string>
    <string name="ignore">Ignore</string>
    <string name="join">Join</string>
    <string name="not_interested">Not Interested</string>
    <string name="group_full">Group full</string>

    <!--我的-->
    <string name="settings">Settings</string>
    <string name="cancle">Cancle</string>
    <string name="done">Done</string>
    <string name="preview">Preview</string>
    <string name="edit">Edit</string>
    <string name="my_photo">My photo</string>
    <string name="mine_notice_1">Add up to 4 photos</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="school">School</string>
    <string name="work">Work</string>
    <string name="job_time">Job Title</string>
    <string name="drink">Drink</string>
    <string name="profile_badge">Profile Badge</string>
    <string name="mine_notice_2">Select a tag to add to your profile</string>
    <string name="about_me">About me</string>
    <string name="categories_into">Event categories I’m into</string>
    <string name="mine_notice_3">What types of events are you into? Choose a minimum of 3 categories</string>
    <string name="buck_list">My event bucket list </string>
    <string name="mine_notice_4">What are you dream events you’d like to attend?</string>
    <string name="profile">Profile</string>
    <string name="preference">Preference</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="account_privacy">Account &amp; Privacy</string>
    <string name="what_new">What\'s New</string>
    <string name="help_center">Help Center</string>
    <string name="log_out">Log Out</string>
    <string name="profile_badge_notice_1">Create your profile badge</string>
    <string name="profile_badge_notice_2">Didn’t see one that fits your status? Customize your own!</string>
    <string name="profile_badge_notice_hint">Write in your tag\nDon’t forget to pick an emoji</string>
    <string name="delete_tag">Delete Tag</string>

    <!--Profile-->
    <string name="custom">Custom</string>
    <string name="add_more">Add more</string>
    <string name="profile_event_hint_1">Run the NY Marathon</string>
    <string name="profile_event_hint_2">Go to NYFW</string>
    <string name="profile_event_hint_3">See Bruce Springstein at Madison Square Garden</string>
    <string name="display_name">Display Name</string>
    <string name="display_my_name">Display My Name</string>
    <string name="my_email">My Email</string>
    <string name="my_email_notice">You will receive buddy invites on this email</string>
    <string name="my_school_name">My School Name</string>
    <string name="do_not_show">Don\'t show on profile</string>
    <string name="my_drink_of_choice">My drink of choice</string>
    <string name="my_drink_of_choice_notice">Any favorite libations?</string>
    <string name="my_drink_of_choice_hint">ex. Espresso Martini</string>
    <string name="my_occupation">My Occupation</string>
    <string name="my_occupation_notice_1">What i do for work</string>
    <string name="my_occupation_hint">ex.Unicorn Trainer</string>
    <string name="choose_interests">Choose Interests</string>
    <string name="select_add_school">Select/Add School</string>
    <string name="select_add_school_hint">type to add new school</string>
    <string name="interests">Interests</string>
    <string name="event_attend_">Events Attended (%s)</string>
    <string name="event_buck_list">Event Bucket List </string>
    <string name="both_like">You and [Name] both like...</string>
    <string name="display_name_error">Please enter the display Name</string>
    <string name="my_school_name_error">Please enter the school Name</string>
    <string name="my_occupation_error">Please enter the occupation</string>
    <string name="my_drink_of_choice_error">Please enter the My drink</string>
    <string name="profile_update_success">Update Success</string>

    <!--Preference-->
    <string name="preference_notice_1">To edit, just select choice below</string>
    <string name="preference_notice_2">FIll in the below to help us better match you to new buddies</string>
    <string name="pronouns">Pronouns</string>
    <string name="distance">Distance</string>
    <!--Age-->
    <string name="age_notice_1">Select an age range</string>
    <string name="age_notice_2">Buddies in this range will show up on your \nsearches</string>
    <string name="age_range">%s - %s years old</string>
    <!--Pronouns-->
    <string name="pronouns_notice_1">Attend events with</string>
    <string name="pronouns_notice_2">Select all pronouns that match your vibe</string>
    <string name="he_him">He/Him</string>
    <string name="she_her">She/Her</string>
    <string name="they_them">They/Them</string>
    <string name="open_to_all">Open to all</string>
    <!--Distance-->
    <string name="distance_notice_1">Set distance preference</string>
    <string name="distance_notice_2">Select distance … interested</string>
    <string name="distance_range">%s Miles</string>
    <!--Invite-->
    <string name="invite_share_text">Join Hula with me to find event buddies! Download at</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="permissione">Permissione</string>
    <string name="push_notification">Push Notification</string>
    <string name="location_services">Location Services</string>
    <string name="location_services_notice">If enabled,Hula will ollect,store,and use your device\'s precise location, such as GPS information,This allows Hula to improve your experience showing you local events happening around you.</string>
    <string name="linked_accounts">Linked Accounts</string>
    <string name="facebook">Facebook</string>
    <string name="apple">Apple</string>
    <string name="data">Data</string>
    <string name="delete_account">Delete Account</string>
    <!--what is new-->
    <string name="what_new_notice">[Welcome message]. Below is a list of what we shipped in each recent iOS release.</string>
    <!--help-->
    <string name="help_notice_1">Let us know!</string>
    <string name="help_notice_2">Have any questions or inquires?Wanna see any \nother events?</string>
    <string name="help_notice_3">Type something here</string>
    <string name="help_notice_4">Please enter content</string>
    <string name="send">Send</string>
    <!--help-->
    <string name="leave_group">Leave Group</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="resend_code"><u>Resend Code.</u></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="terms_of_service"><u>Terms of Service</u></string>
    <string name="i_don_t_have_a_code"><u>I don\'t have a code</u></string>


</resources>