<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.hula.myapplication.widget.HuLaActionBar
        android:id="@+id/action_bar"
        style="@style/defActionBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:acb_enableBack="false"
        app:acb_title="">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tv_back"
                android:layout_width="@dimen/dimen_36"
                android:layout_height="@dimen/dimen_36"
                android:layout_marginStart="8dp"
                android:background="@mipmap/icon_finish" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/work"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:paddingEnd="@dimen/dimen_8"
                android:text="@string/done"
                android:textColor="@color/app_main_color"
                android:textSize="13dp" />


        </LinearLayout>

    </com.hula.myapplication.widget.HuLaActionBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimen_16">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_occupation"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_occupation_notice_1"
            android:textSize="13dp"
            android:textColor="@color/color_2e2e2e"/>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@null"
            android:hint="@string/my_occupation_hint"
            android:text=""
            android:textColor="@color/app_main_color"
            android:textSize="24dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="@color/color_b7b7b7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="44dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/do_not_show"
                android:textColor="@color/color_2e2e2e"
                android:textSize="13dp"
                android:textStyle="bold" />

            <tim.com.libnetwork.view.switchbuttom.SwitchButton
                android:layout_width="65dp"
                android:layout_height="31dp"
                app:sb_checked="false"
                app:sb_checked_color="@color/app_main_color"
                app:sb_background="@color/color_b7b7b7"
                app:sb_show_indicator="false" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>