<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.hula.myapplication.widget.HuLaActionBar
        android:id="@+id/action_bar"
        style="@style/defActionBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:acb_enableBack="false"
        app:acb_title="">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tv_back"
                android:layout_width="@dimen/dimen_36"
                android:layout_height="@dimen/dimen_36"
                android:layout_marginStart="8dp"
                android:background="@mipmap/icon_finish" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/account_privacy"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/tv_more"
                android:layout_width="@dimen/dimen_36"
                android:layout_height="@dimen/dimen_36"
                android:layout_marginStart="8dp"
                android:visibility="invisible" />


        </LinearLayout>

    </com.hula.myapplication.widget.HuLaActionBar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/color_2e2e2e"
                android:textSize="13dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/color_5C5C5C"
                android:textSize="13dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12"
                android:text="@string/email"
                android:textColor="@color/color_2e2e2e"
                android:textSize="13dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_null"
                android:textColor="@color/color_5C5C5C"
                android:textSize="13dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12"
                android:text="@string/phone"
                android:textColor="@color/color_2e2e2e"
                android:textSize="13dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_null"
                android:textColor="@color/color_5C5C5C"
                android:textSize="13dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_12"
                android:background="@color/color_b7b7b7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_18"
                android:text="@string/permissione"
                android:textColor="@color/color_2e2e2e"
                android:textSize="18dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_18"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/push_notification"
                    android:textColor="@color/color_2e2e2e"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <tim.com.libnetwork.view.switchbuttom.SwitchButton
                    android:layout_width="60dp"
                    android:layout_height="38dp"
                    app:sb_checked="false"
                    app:sb_checked_color="@color/app_main_color"
                    app:sb_show_indicator="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_18"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/location_services"
                    android:textColor="@color/color_2e2e2e"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <tim.com.libnetwork.view.switchbuttom.SwitchButton
                    android:layout_width="60dp"
                    android:layout_height="38dp"
                    app:sb_checked="false"
                    app:sb_checked_color="@color/app_main_color"
                    app:sb_show_indicator="false" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:layout_marginEnd="@dimen/dimen_60"
                android:text="@string/location_services_notice"
                android:textColor="@color/color_5C5C5C"
                android:textSize="13dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_12"
                android:background="@color/color_b7b7b7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_18"
                android:text="@string/linked_accounts"
                android:textColor="@color/color_2e2e2e"
                android:textSize="18dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_18"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@mipmap/icon_f" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_18"
                    android:layout_weight="1"
                    android:text="@string/facebook"
                    android:textColor="@color/color_2e2e2e"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <tim.com.libnetwork.view.switchbuttom.SwitchButton
                    android:layout_width="60dp"
                    android:layout_height="38dp"
                    app:sb_checked="false"
                    app:sb_checked_color="@color/app_main_color"
                    app:sb_show_indicator="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_18"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@mipmap/icon_apple" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_18"
                    android:layout_weight="1"
                    android:text="@string/apple"
                    android:textColor="@color/color_2e2e2e"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <tim.com.libnetwork.view.switchbuttom.SwitchButton
                    android:layout_width="60dp"
                    android:layout_height="38dp"
                    app:sb_checked="false"
                    app:sb_checked_color="@color/app_main_color"
                    app:sb_show_indicator="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_18"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@mipmap/icon_phone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_18"
                    android:layout_weight="1"
                    android:text="@string/phone"
                    android:textColor="@color/color_2e2e2e"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <tim.com.libnetwork.view.switchbuttom.SwitchButton
                    android:layout_width="60dp"
                    android:layout_height="38dp"
                    app:sb_checked="false"
                    app:sb_checked_color="@color/app_main_color"
                    app:sb_show_indicator="false" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_12"
                android:background="@color/color_b7b7b7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_18"
                android:text="@string/data"
                android:textColor="@color/color_2e2e2e"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/delete_account"
                android:textColor="@color/color_2e2e2e"
                android:textSize="16dp" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>