<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.hula.myapplication.widget.HuLaActionBar
        android:id="@+id/action_bar"
        style="@style/defActionBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:acb_enableBack="false"
        app:acb_title="">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tv_back"
                android:layout_width="@dimen/dimen_36"
                android:layout_height="@dimen/dimen_36"
                android:layout_marginStart="8dp"
                android:background="@mipmap/icon_finish" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/profile_badge"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/tv_more"
                android:layout_width="@dimen/dimen_36"
                android:layout_height="@dimen/dimen_36"
                android:layout_marginStart="8dp"
                android:visibility="invisible" />


        </LinearLayout>

    </com.hula.myapplication.widget.HuLaActionBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimen_16">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_badge_notice_1"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_badge_notice_2"
            android:textColor="@color/black"
            android:textSize="13dp" />

        <RelativeLayout
            android:id="@+id/ll_edit"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:layout_marginTop="@dimen/dimen_18"
            android:background="@drawable/shape_radius15_stroke_black"
            android:padding="@dimen/dimen_12">

            <EditText
                android:id="@+id/edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/tv_edit_length"
                android:background="@null"
                android:hint="@string/profile_badge_notice_hint"
                android:inputType="textMultiLine"
                android:lineSpacingMultiplier="1.2"
                android:maxLength="20"
                android:textColor="@color/color_5C5C5C"
                android:textSize="@dimen/dimen_14" />

            <TextView
                android:id="@+id/tv_edit_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/dimen_8"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="20"
                android:textColor="@color/app_main_color"
                android:textSize="13dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/shape_radius100_c4c4c4"
            android:layout_gravity="center_horizontal"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="13dp"/>

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_radius100_stroke1_b6b6b6"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/delete_tag"
            android:textColor="@color/color_b7b7b7"
            android:textSize="13dp"/>

    </LinearLayout>

</LinearLayout>